build: Java 8 fallback support